fixes nav actions on ios

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -21,6 +21,8 @@ body > .ember-view {
   height: 100%;
 }
 
+.pointer { cursor: pointer; }
+
 .flex {
   display: flex;
 }
